// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests (AC6) matches snapshot for featured variant 1`] = `
<div>
  <article
    class="project-card project-card--featured"
    data-testid="project-card-featured"
  >
    <div
      data-testid="box-shadow"
    />
    <a
      class="project-card__image-link--featured"
      data-testid="project-card-image-link"
      href="/projects/test-project"
    >
      <img
        alt="Snapshot Featured Project"
        class="project-card__image--featured"
        src="/images/screenshot1.jpg"
      />
      <div
        aria-label="Technologies used"
        class="project-card__tech-stack project-card__tech-stack--featured project-card__tech-stack--floating-minimal"
        data-testid="project-card-tech-stack"
        role="list"
      >
        <span
          aria-label="React"
          class="project-card__tech-icon"
          role="listitem"
          title="React"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 128 128"
          >
            <svg
              data-testid="react-icon"
            />
          </svg>
        </span>
        <span
          aria-label="TypeScript"
          class="project-card__tech-icon"
          role="listitem"
          title="TypeScript"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 128 128"
          >
            <svg
              data-testid="typescript-icon"
            />
          </svg>
        </span>
      </div>
    </a>
    <div
      class="project-card__content--featured"
      data-testid="project-card-content"
    >
      <div
        class="project-card__context"
        data-testid="project-card-context"
      >
        <span
          class="project-card__tags project-card__context-line"
        >
          Web Development
        </span>
      </div>
      <a
        class="project-card__title-link"
        href="/projects/test-project"
      >
        <h2
          class="project-card__title--featured"
          data-testid="project-card-title"
        >
          Snapshot Featured Project
        </h2>
      </a>
      <p
        class="project-card__summary"
        data-testid="project-card-summary"
      >
        A featured project for snapshot testing
      </p>
      <div
        class="project-card__actions project-card__actions--featured"
        data-testid="project-card-actions"
      >
        <button
          aria-label="Open architecture view for Snapshot Featured Project"
          class="project-card__action-link project-card__action-link--architecture"
          data-testid="project-card-action-architecture"
          type="button"
        >
          Explore System
        </button>
        <a
          aria-label="Open source code for Snapshot Featured Project"
          class="project-card__action-link project-card__action-link--source project-card__action-link--source-icon"
          data-testid="project-card-action-source"
          href="https://github.com/example/repo"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            data-testid="github-icon"
          />
        </a>
        <a
          aria-label="Open live demo for Snapshot Featured Project"
          class="project-card__action-link project-card__action-link--demo project-card__action-link--demo-inverse"
          data-testid="project-card-action-demo"
          href="https://demo.example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          Live Demo
        </a>
      </div>
    </div>
  </article>
</div>
`;

exports[`Snapshot Tests (AC6) matches snapshot for grid variant 1`] = `
<div>
  <div
    class="project-card__tilt-wrapper"
  >
    <article
      class="project-card project-card--grid"
      data-testid="project-card-grid"
    >
      <div
        data-testid="box-shadow"
      />
      <a
        class="project-card__image-link"
        data-testid="project-card-image-link"
        href="/projects/test-project"
      >
        <img
          alt="Snapshot Grid Project"
          class="project-card__image"
          src="/images/test-project.jpg"
        />
        <div
          aria-label="Technologies used"
          class="project-card__tech-stack  project-card__tech-stack--floating-minimal"
          data-testid="project-card-tech-stack"
          role="list"
        >
          <span
            aria-label="React"
            class="project-card__tech-icon"
            role="listitem"
            title="React"
          >
            <svg
              aria-hidden="true"
              viewBox="0 0 128 128"
            >
              <svg
                data-testid="react-icon"
              />
            </svg>
          </span>
          <span
            aria-label="TypeScript"
            class="project-card__tech-icon"
            role="listitem"
            title="TypeScript"
          >
            <svg
              aria-hidden="true"
              viewBox="0 0 128 128"
            >
              <svg
                data-testid="typescript-icon"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        class="project-card__content"
        data-testid="project-card-content"
      >
        <span
          class="project-card__tags project-card__context-line"
          data-testid="project-card-tags"
        >
          Web Development
        </span>
        <a
          class="project-card__title-link"
          href="/projects/test-project"
        >
          <h2
            class="project-card__title"
            data-testid="project-card-title"
          >
            Snapshot Grid Project
          </h2>
        </a>
        <div
          class="project-card__actions project-card__actions--grid"
          data-testid="project-card-actions"
        >
          <a
            aria-label="Open source code for Snapshot Grid Project"
            class="project-card__action-link project-card__action-link--source project-card__action-link--source-icon"
            data-testid="project-card-action-source"
            href="https://github.com/example/repo"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              data-testid="github-icon"
            />
          </a>
          <a
            aria-label="Open live demo for Snapshot Grid Project"
            class="project-card__action-link project-card__action-link--demo project-card__action-link--demo-inverse"
            data-testid="project-card-action-demo"
            href="https://demo.example.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Live Demo
          </a>
        </div>
      </div>
    </article>
  </div>
</div>
`;

exports[`Snapshot Tests (AC6) matches snapshot with overflow technologies 1`] = `
<div>
  <div
    aria-label="Technologies used"
    class="project-card__tech-stack"
    data-testid="project-card-tech-stack"
    role="list"
  >
    <span
      aria-label="React"
      class="project-card__tech-icon"
      role="listitem"
      title="React"
    >
      <svg
        aria-hidden="true"
        viewBox="0 0 128 128"
      >
        <svg
          data-testid="react-icon"
        />
      </svg>
    </span>
    <span
      aria-label="TypeScript"
      class="project-card__tech-icon"
      role="listitem"
      title="TypeScript"
    >
      <svg
        aria-hidden="true"
        viewBox="0 0 128 128"
      >
        <svg
          data-testid="typescript-icon"
        />
      </svg>
    </span>
    <span
      aria-label="Next.js"
      class="project-card__tech-icon"
      role="listitem"
      title="Next.js"
    >
      <svg
        aria-hidden="true"
        viewBox="0 0 128 128"
      >
        <svg
          data-testid="next-icon"
        />
      </svg>
    </span>
    <span
      aria-label="Node.js"
      class="project-card__tech-icon"
      role="listitem"
      title="Node.js"
    >
      <svg
        aria-hidden="true"
        viewBox="0 0 128 128"
      >
        <svg
          data-testid="node-icon"
        />
      </svg>
    </span>
    <span
      aria-label="Docker"
      class="project-card__tech-icon"
      role="listitem"
      title="Docker"
    >
      <svg
        aria-hidden="true"
        viewBox="0 0 128 128"
      >
        <svg
          data-testid="docker-icon"
        />
      </svg>
    </span>
    <span
      aria-label="PostgreSQL"
      class="project-card__tech-icon"
      role="listitem"
      title="PostgreSQL"
    >
      <svg
        aria-hidden="true"
        viewBox="0 0 128 128"
      >
        <svg
          data-testid="postgres-icon"
        />
      </svg>
    </span>
  </div>
</div>
`;
